<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/item_marginLeft"
    android:layout_marginEnd="@dimen/item_marginRight"
    android:layout_marginBottom="@dimen/item_marginBottom"
    android:background="@color/colorWhite"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/film_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/is_favorite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_title"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/item_space"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                tools:text="Russia" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_episode_id"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/item_space"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/episode_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_text"
                tools:text="Moscow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_opening_crawl"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/opening_crawl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_text"
                tools:text="Russia" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_director"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/item_space"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_text"
                tools:text="Russia" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_producer"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/item_space"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/producer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_text"
                tools:text="Russia" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_release_data"
                android:textStyle="bold" />

            <Space
                android:layout_width="@dimen/item_space"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_text"
                tools:text="Russia" />
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/is_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:button="@drawable/ic_favorite" />
</RelativeLayout>
