<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignStart="@dimen/item_margin_left"
    android:layout_alignEnd="@dimen/item_margin_right"
    android:background="@color/colorWhite">

    <CheckBox
        android:id="@+id/is_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/item_margin_top"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:button="@drawable/ic_favorite" />

    <LinearLayout
        android:id="@+id/people_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginTop="@dimen/item_margin_bottom"
        android:layout_toStartOf="@id/is_favorite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                tools:text="Russia" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/people_sub_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people_birth_year"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="@dimen/item_space"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/birth_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_text"
                    tools:text="Moscow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people_eye_color"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="@dimen/item_space"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/eye_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_text"
                    tools:text="Russia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people_gender"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="@dimen/item_space"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_text"
                    tools:text="Russia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people_height"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="@dimen/item_space"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/p_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_text"
                    tools:text="Russia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people_mass"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="@dimen/item_space"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/mass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_text"
                    tools:text="Russia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people_skin_color"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="@dimen/item_space"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/skin_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_text"
                    tools:text="Russia" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
